post-processing intros and recsys section

--- a/chapter1-intro.tex
+++ b/chapter1-intro.tex
@@ -21,7 +21,7 @@ Recommender systems are one of the most pervasive applications of machine learni
 
 %Many online platforms attempt to connect job opportunities and job applicants in some way.Sometimes they are professional networks with a job-seeking component such as Xing and LinkedIn, or they might have been designed only for employment seeking.
 
-For example, suppose more women apply for lower-paying jobs on a given job-seeking website. Also, assume that the recommendation algorithm relies heavily on the correlation between demographic information and job salaries. In this case, jobs with lower salaries or ranks might show up more often in the recommendations to women. Suppose that this behavior is more common in women than men, therefore more jobs with better salaries and higher ranks will be recommended to men. Basileal et al. \cite{Korolova2021JobAds} demonstrates this issue in the Facebook's ad delivery system and how demographic information causes the system to discriminate against women regardless of their qualifications.
+For example, suppose more women apply for lower-paying jobs on a given job-seeking website. Also, assume that the recommendation algorithm relies heavily on the correlation between demographic information and job salaries. In this case, jobs with lower salaries or ranks might show up more often in the recommendations to women. Suppose that this behavior is more common in women than men, therefore more jobs with better salaries and higher ranks will be recommended to men. Basileal et al. (2021) \cite{Korolova2021JobAds} demonstrate this issue in the Facebook's ad delivery system and how demographic information causes the system to discriminate against women regardless of their qualifications.
 
 In another real-world example, Human Rights Watch reports similar discrimination against women in the job market \cite{HRW2018ads}. They analyzed over 36,000 job advertisements posted between 2013 and 2018 on Chinese recruitment and company websites and social media platforms. Many of the ads specify a requirement or preference to hire men regardless of other qualified women candidates. Some job posts require women to have certain physical attributes – with respect to height, weight, voice, or facial appearance – that are irrelevant to job duties.
 
@@ -104,7 +104,7 @@ Recommender systems recognize the more general patterns in the data and use this
 
 
 % In this case, recommender systems generate recommendations according to the general patterns of users interests. 
-Users' rating behavior is inconsistent, and their preferences are not fixed. Said et al. (2012) \cite{Said2012MagicBarrier} introduces and discusses the concept of the \textbf{Magic Barrier} in recommender systems, a barrier caused by variability in user behavior which prevents the model from reaching an ideal accuracy. Besides the behavioral inconsistency, users' tastes might evolve \cite{McAuley2013expertise} as they consume the recommendations. To improve accuracy, recommender systems might need to model these temporal and dynamic changes. Additionally, recommender system models built on general patterns in the data capture mainly the long-term interests of users and might disregard users' short-term needs and interests. Many researchers have attempted to use contextual information to account for these changes \cite{Adomavicius2011context}.
+Users' rating behavior is inconsistent, and their preferences are not fixed. Said et al. (2012) \cite{Said2012MagicBarrier} introduces and discusses the concept of the \textit{Magic Barrier} in recommender systems, a barrier caused by variability in user behavior which prevents the model from reaching an ideal accuracy. Besides the behavioral inconsistency, users' tastes might evolve \cite{McAuley2013expertise} as they consume the recommendations. To improve accuracy, recommender systems might need to model these temporal and dynamic changes. Additionally, recommender system models built on general patterns in the data capture mainly the long-term interests of users and might disregard users' short-term needs and interests. Many researchers have attempted to use contextual information to account for these changes \cite{Adomavicius2011context}.
 
 In some cases, due to technical limitations or lack of data, the system fails to present users their items of interest, so users might end up clicking on the items that are not reflective of their interest. This data might enter the training data and bias the input for the subsequent iterations. The points mentioned above are just a few examples of underlying confounding factors behind variability in user behavior that make the prediction task challenging in these systems.
 
@@ -143,12 +143,12 @@ The collected data used for training recommendation models might not reflect the
 Recommendation datasets are usually intertwined with popularity bias \cite{celma2008hits,lee2014fairness}. Striving to reach a high accuracy will lead to reinforcing popularity bias~\cite{barocas2016big}. It is known that these systems affect the users’ opinions, and hence, their ratings of items \cite{Cosley2003Influence}. Thus, a user’s rating of an item is either their intrinsic preference or the influence of the recommender system on the user. Users are more likely to click on the items that recommender systems deliver to them. This phenomenon is called presentation bias \cite{baeza2018bias}. 
 Over time, items gain even more popularity as they are shown to users, up to the point that less popular items are not recommended at all. Due to this positive feedback loop, the item space shrinks, and the recommendation lists become too homogeneous \cite{Chaney2018Homogeneity}. The formed \textit{filter bubble} might be harmful or unfair to users as users' choices become limited and homogeneous, preventing them from receiving novel content or ideas. A real-world example of the harms that filter bubbles cause for users is the influence of the news feeds on people's mindset that can eventually lead to political polarization~\cite{HONG2016777}.
 
-% These algorithms might also propagate the existing biases in the data \cite{barocas2016big}. For example, recommender systems increase the popularity of items by just presenting those items to the users. 
-
+% These algorithms might also propagate the existing biases in the data \cite{barocas2016big}. For example, recommender systems increase the popularity of items by just presenting those items to the users.
 
 % Not only is this issue discriminatory towards users, but it is also unfair to (content) providers as a small group of them gain unfairly high visibility while the others are systematically pushed away. 
 Not only the consumers of recommendations will be affected, but the item providers might also suffer from discrimination. Popularity bias leaves less popular (item) providers with fewer consumer exposure opportunities, pushing them away from the system. This unjust exposure can affect their livelihoods. In a music streaming platform, this issue could affect the musicians income. In \textit{Algorithms Of Oppression}, Sofiya Noble \cite{noble2018algorithms} discusses this issue in personalized search through real-world examples and people's experiences. The author later, discusses how popularity bias in Yelp along with other factors such as private interests in promoting certain sites, as well as monopoly status of a relatively small number of Internet search engines, can potentially lead to racial discrimination, especially businesses owned by women of color.
 
+Popularity bias in the input data can lead to defective power dynamics in the user subgroups and influence the overall recommendations. As an example, Eskandanian et al. \cite{Eskandanian2019power} discusses how this issue can cause the preference of 95\% the users to be overshadowed by only the preference of 5\% of influential users who have rated mostly popular items (consumer unfairness).
 
 Using accuracy as the only measure to optimize might even be undesirable or unsatisfactory to one or all the stakeholders of a recommender system. This is because increasing accuracy, without considering other goals and the potential causes of harm, can contribute to introducing and propagating biases or even reinforcing some of the existing biases in the system, such as popularity bias, positive feedback loops, filter bubbles, miscalibration error, over/under estimation of the predictions, etc. 
 
@@ -202,13 +202,33 @@ Integrating and operationalizing a goal such as fairness to the system is essent
     % with the goal of financial global inclusion. 
     
     Kiva partners with local organizations in countries across the globe and, since its founding, has lent \$1.46 billion to 3.4 million borrowers in 77 countries with the support of 1.9 million lenders. Information about lending opportunities is listed on Kiva's site for a fixed period and promoted to its lenders through various means. A typical lender will contribute only a fraction of the total amount (as low as \$25) for any one loan, but may support multiple loans at any one time. As with any lending transaction, there is risk that the borrower will not repay, but this is rare in Kiva where the repayment rate is approximately 96\%. Lenders do not get any interest on their investments so supporting a Kiva borrower is essentially a philanthropic act.
-
-    Therefore, the main sides of the interaction are the borrowers, generally developing-world entrepreneurs who seek small amounts of capital to enhance their business capacity, and lenders, who are the application's end-users, as illustrated in Figure \ref{fig:kiva_process}. Note that the borrowers are the providers or the producers of the items/loans, and the lenders are the receivers or users of the recommendations. We will use these words interchangeably throughout this dissertation. Kiva's mission emphasizes equitable access to capital for its borrowers, who generally cannot make use of traditional forms of banking and lending~\cite{Choo_understanding_kiva}. In this situation, a loan recommender system is intended to lower the search costs of its users (lenders) by finding borrowers whose goals and needs appeal to them. Several provider-side fairness concerns arise in this recommendation context, but no consumer-side fairness has risen as a concern so far.
+    
+    Therefore, the main sides of the interaction are the borrowers, generally developing-world entrepreneurs who seek small amounts of capital to enhance their business capacity, and lenders, who are the application's end-users, as illustrated in Figure \ref{fig:kiva_process}. Note that the borrowers are the providers or the producers of the items/loans, and the lenders are the receivers or users of the recommendations. Kiva's mission emphasizes equitable access to capital for its borrowers, who generally cannot make use of traditional forms of banking and lending~\cite{Choo_understanding_kiva}. In this situation, a loan recommender system is intended to lower the search costs of its users (lenders) by finding borrowers whose goals and needs appeal to them. Several provider-side fairness concerns arise in this recommendation context, but no consumer-side fairness has risen as a concern so far.
+    
+    \begin{figure}[htb]
+    %\vspace{-0.25cm}
+    \includegraphics[width=0.98\columnwidth]{imgs/far/microlending.png}
+    %\vspace{-0.25cm}
+    \caption{Kiva.org provides an intermediary service for lenders and borrowers.}
+    \label{fig:kiva_process}
+    \end{figure}
+    
     
     One key provider-side concern arising from Kiva's mission of supporting worldwide access to capital, is that the geographic imbalances in users' preferences may manifest themselves in the disproportionate representation of certain countries or regions in recommendation lists. This could give rise to a positive feedback loop, as the recommended items are more likely to be supported, and thus the lending becomes even more highly concentrated. A similar kind of imbalance may arise with respect to different industries or economic sectors. Thus, we can identify at least two fairness concerns within this recommender system: equity in geographic distribution of capital \cite{liu2019personalized}, and equity across economic sectors \cite{sonboli2020opportunistic} which will be explained in detail in Chapter \ref{ch:fairness_postproc}. Other provider-side fairness concerns might arise in this context, e.g., the loan amount (loans with higher amounts get funded more slowly), but these are outside the scope of this thesis.
     
     % \todo[inline]{move this earlier}
-    We situate our research within the organizational context of Kiva Microloans. This is a compelling case study to explore recommendation fairness since its fairness requirements are driven by internal needs surrounding its philanthropic mission, rather than external demands such as regulatory requirements found in financial services or employment, etc. A regulatory environment is more likely to provoke a defensive response related to fairness questions, which tends to hamper robust discussion of fairness properties in existing systems~\cite{chen2018fair,holstein2019improving}. In addition, because of its philanthropic mission, it is reasonable to expect that Kiva's users will be receptive to fairness-oriented interventions. Finally, as a hybrid organization, embodying the characteristics of a nonprofit with the characteristics of a financial services institution, research embedded with Kiva is well-situated to have a broader and more generalizable impact across genres of institutions and sectors.
+    We situate our research within the organizational context of Kiva Microloans. This is a compelling case study to explore recommendation fairness since its fairness requirements are driven by internal needs surrounding its philanthropic mission, rather than external demands such as regulatory requirements found in financial services or employment, etc. A regulatory environment is more likely to provoke a defensive response related to fairness questions, which tends to hamper robust discussion of fairness properties in existing systems~\cite{chen2018fair,holstein2019improving}. A real-world example of Kiva's fairness-aware recommendations is depicted in Figure \ref{fig:kiva_underbanked}.
+    
+    
+    \begin{figure}[htb]
+    %\vspace{-0.25cm}
+    \includegraphics[width=0.98\columnwidth]{imgs/far/underbanked_areas.png}
+    %\vspace{-0.25cm}
+    \caption{Kiva.org provides fairness-aware recommendations.}
+    \label{fig:kiva_underbanked}
+    \end{figure}
+    
+    In addition, because of its philanthropic mission, it is reasonable to expect that Kiva's users will be receptive to fairness-oriented interventions. Finally, as a hybrid organization, embodying the characteristics of a nonprofit with the characteristics of a financial services institution, research embedded with Kiva is well-situated to have a broader and more generalizable impact across genres of institutions and sectors.
 
     % Loan recommendation, as in the case of Kiva is a suitable candidate for the exploration of recommendation fairness due to several reasons. One of them is that fairness requirements are driven by the internal needs surrounding Kiva's philanthropic mission to provide equitable access to capital for its borrowers regardless of their demographic information such as gender, the country of origin, etc., as well as other characteristics e.g. the economic sector for which they need the loan. Another reason reason on the suitability of Kiva is as follows: Kiva's users will be more receptive of the fairness-oriented interventions in recommendations due to its philanthropic nature whereas the users of a movie streaming website such as Netflix, might not care to be fair to the movie producers.
     
@@ -233,7 +253,7 @@ Integrating and operationalizing a goal such as fairness to the system is essent
     % \todo[inline]{this term is not defined (fairness concerns)}
     After identifying the fairness concerns and defining them according to the context and application in use, it becomes possible to consider interventions in recommender systems to improve their fairness and performance. In doing so, it is worth keeping in mind the ``traps'' identified in \cite{selbst2019fairness}, possible hazards in applying fairness concepts in sociotechnical systems. Selbst and colleagues note that sometimes a technical fix is not always the most appropriate approach for problems of power imbalance and bias, and the failure to recognize this is defined as the \textit{solutionism trap}. There may be a wide variety of non-computational solutions to problems that surface themselves as unfair recommendations. Generally, three types of solutions have been proposed to operationalize fairness notions to mitigate unfairness: pre-processing, in-processing, and post-processing approaches.
     
-    \textbf{Pre-processing} methods focus on compensating for the existing biases in a dataset, using different data collection enhancements to compensate for the biases that occur due to data imbalance. \textbf{In-processing} approaches try to improve the fairness of results by integrating fairness notions into recommendation generation itself. \textbf{Post-processing} approaches focus on modifying the outputs of algorithms to satisfy a fairness criterion. More details on these methods can be found in Chapter \ref{ch:fairness}. We propose one in-processing, and three post-processing approaches to improve the fairness-accuracy trade-off. Additionally, I will discuss the preliminary studies on a pre-processing method. More details are presented in Chapter \ref{ch:fairness_inproc}, and Chapter \ref{ch:fairness_postproc}. We run our experiments and analyze our results in the e-commerce and philanthropic contexts, which are explained in Chapter \ref{ch:methodology}.
+    \textbf{Pre-processing} methods focus on compensating for the existing biases in a dataset, using different data collection enhancements to compensate for the biases that occur due to data imbalance. \textit{In-processing} approaches try to improve the fairness of results by integrating fairness notions into recommendation generation itself. \textit{Post-processing} approaches focus on modifying the outputs of algorithms to satisfy a fairness criterion. More details on these methods can be found in Chapter \ref{ch:fairness}. We propose one in-processing, and three post-processing approaches to improve the fairness-accuracy trade-off. Additionally, I will discuss the preliminary studies on a pre-processing method. More details are presented in Chapter \ref{ch:fairness_inproc}, and Chapter \ref{ch:fairness_postproc}. We run our experiments and analyze our results in the e-commerce and philanthropic contexts, which are explained in Chapter \ref{ch:methodology}.
 
 %TODO check capital Chapter
 
