--- a/chapter5-inprocess.tex
+++ b/chapter5-inprocess.tex
@@ -5,18 +5,19 @@
 
 % \todo[inline]{changing the title to in-processing methods to achieve fairness?}
 % \todo[inline]{accuracy or utility or personalization in general?}
-As we discussed in \ref{ch:fairness}, there are three main approaches to integrating fairness notions into recommender systems: pre-processing, in-processing, and post-processing. In-processing approaches for fairness interaction is a topic of considerable research interest in recommender systems. Such algorithms treat recommendations as multi-objective optimization problems where the goal is to maintain a certain level of accuracy, while ensuring fairness in recommendation lists. One of the main challenges in doing so, is the inherent trade-off between personalization and non-accuracy metrics such as fairness or diversity that is incorporated in their objective function.
+As we discussed in Chapter \ref{ch:fairness}, there are three main approaches to integrating fairness notions into recommender systems: pre-processing, in-processing, and post-processing. Fairness integration through in-processing, is a topic of considerable research interest in recommender systems. Such algorithms treat recommendations as multi-objective optimization problems where the goal is to maintain a certain level of accuracy, while ensuring fairness in recommendation lists. One of the main challenges in doing so, is the inherent trade-off between personalization and non-accuracy metrics such as fairness that are incorporated in the objective function.
 
-Personal preference is the essence of recommendation, where individual taste is paramount. And as we have explained in \ref{ch:fairness}, personalization and fairness are competing goals due to various reasons. On the other hand, many recommendation applications involve multiple stakeholders, and each one may have fairness concerns of its own that might oppose each other. Therefore, for the multisided platforms to thrive, it is important to satisfy the fairness concerns of different stakeholders while maintaining personalization as a promised service to users.
+Personal preference is the essence of recommendation, where individual taste is paramount. As we explained in Chapter \ref{ch:fairness}, personalization and fairness are competing goals due to various reasons. Additionally, many recommendation applications involve multiple stakeholders, and each one may have fairness concerns of its own that might oppose other concerns. Therefore, for the multisided platforms to thrive, it is important to satisfy the fairness concerns of different stakeholders while maintaining personalization as a promised service to users.
 
-In-processing methods are one approach that can be used to negotiate between fairness and accuracy. In this section, we examine applications in which fairness with respect to consumers (C-fairness) and the providers (P-fairness) is important. We show that variants of the well-known sparse linear method (SLIM) can be used to achieve a reasonable balance between fairness and accuracy in collaborative filtering while being in control of this balance. In order to improve ``fair'', in the proposed method, we generate neighborhoods (i.e. all the users or items that are similar to each other in some way) for collaborative recommendations in such a way to have \textit{balanced representation} of the opinions across groups. Note that, our goal is to achieve group fairness (consumer or provider) and will measure fairness of the results accordingly.
+In-processing methods are one approach to negotiate between fairness and accuracy. This section examines applications in which fairness with respect to consumers (C-fairness) and the providers (P-fairness) is important. We show that variants of the well-known sparse linear method (SLIM) can be used to achieve a reasonable balance between fairness and accuracy in collaborative filtering, and being in control of this balance. To improve ``fairness'' for, in the proposed method, we generate neighborhoods (i.e. all the users or items that are similar to each other in some way) for collaborative recommendations in such a way to have \textit{balanced representation} of the opinions across groups. We demonstrate that this method can be used for provider-side and consumer-side fairness.
 
+% Note that, our goal is to achieve group fairness (consumer or provider) and will measure fairness of the results accordingly.
 % One option that we explore in this paper is to design a recommender system following the approach of \cite{zemel2013learning} in generating fair classification. % A recommender system distinguished by C-fairness is one that must take into account the disparate impact of recommendation on protected classes of recommendation consumers.
 
 
 \section{Balanced Neighborhoods in Recommendation}
 
-The idea of creating a fair or balanced representation to achieve fairness first was proposed by \cite{zemel2013learning}. In their work, the authors impose a fairness constraint on a classification by creating a set of prototypes to which instances are mapped, which are called as \textit{fair representations}. The prototypes each have equal representations of users in the protected and unprotected classes so that the association between an instance and a prototype carries no information about the protected attribute. 
+The idea of creating a balanced representation to achieve fairness was first proposed by \cite{zemel2013learning}. In their work, the authors impose a fairness constraint on a classification by creating a set of prototypes to which instances are mapped, which are called as \textit{fair representations}. The prototypes each have equal representations of users in the protected and unprotected classes so that the association between an instance and a prototype carries no information about the protected attribute. 
 
 As noted above, the requirement for personalization in recommendation means that we have as many classification tasks as we have users. A direct application of the fair prototype idea would aggregate many users together and produce the same recommendations for all, significantly reducing the level of personalization and the recommendation accuracy. This idea must be adapted to apply to recommendation where maintaining personalization is a goal. One of the fundamental ideas of collaborative recommendation is that of the \textit{peer user}, a neighbor whose patterns of interest match those of the target user and whose ratings can be extrapolated to make recommendations for the target user. One place where bias may creep into collaborative recommendation may be through the formation of peer neighborhoods.
 
