--- a/chapter6-ofair.tex
+++ b/chapter6-ofair.tex
@@ -199,7 +199,7 @@ Note that PFAR inherits the limitation of xQuAD in that it assumes binary inclus
 \subsection{Opportunistic Fairness}
 \label{subsec:ofair_opp_fair}
 
-We are now ready to describe \textit{OFAiR} (\textbf{O}pportunistic \textbf{F}airness-\textbf{A}ware \textbf{R}eranking), which incorporates personalization at the feature level into the re-ranking process and also allows fine-grained control of protected group promotion by using per-feature weights. 
+We are now ready to describe \textit{OFAiR} (\textit{O}pportunistic \textit{F}airness-\textit{A}ware \textit{R}eranking), which incorporates personalization at the feature level into the re-ranking process and also allows fine-grained control of protected group promotion by using per-feature weights. 
 
 As discussed above, we can represent the variation in a user's profile across all features through the vector $\vec{\tau}_u$, calculated using information entropy. However, because these weights are feature-specific, we cannot incorporate them as a single multiplier as found in PFAR. Also, because we are interested in fine-grained control over the proportions of protected group items in recommendation lists, the xQuAD formula with its binary inclusion metric is not appropriate. So, our alternative in OFAiR applies the MMR approach by penalizing item similarity, but we build the feature significance into the similarity metric itself. We want to add items to the recommendation list if they add to the representation of protected groups in the recommendation list and if they differ from the items on the list in areas of high diversity tolerance for the user. To achieve this effect, we multiply together the user-specific tolerance weight for each feature and a weight associated with a feature's protected / unprotected class. 
 
