--- a/chapter8-conclusion.tex
+++ b/chapter8-conclusion.tex
@@ -1,6 +1,32 @@
 \chapter{Conclusion \& Future Work}
 \label{conclude}
 
-\section{Transparency}
-\section{Data minimization}
+% \section{Transparency}
+% \section{Data minimization}
+
+a brief discussion of the issues of accuracy
+
+solutions presented
+
+then the limitations
+
+group fairness we try to provide solutions for
+
+bias isn't felt equally by everyone
+societal harms
+
+don't lose the protected value concept when writing about popularity bias
+
+popularity bias plays into it, but it's not only that.. these put a bigger burden on the protective group
+example, black women who sing in Spanish are treated unfairly
+
+I am not trying to solve the whole issue. I am creating tools and examples of the technology so researchers can use and apply in their own applications
+
+it is not perfect set of solutions they are just examples of how to approach this problem and providing tools to help mitigating the issue
+
+this work is not also a rich detailed analysis of Kiva
+
+
+
+
 
