--- a/refs.bib
+++ b/refs.bib
@@ -1150,7 +1150,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3292500.3330664},
 doi = {10.1145/3292500.3330664},
-booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery &amp; Data Mining},
+booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
 pages = {2459–2468},
 numpages = {10},
 location = {Anchorage, AK, USA},
@@ -4751,6 +4751,162 @@ location = {Ljubljana, Slovenia},
 series = {WWW '21}
 }
 
+@article{burke2000knowledge,
+  title={Knowledge-based recommender systems},
+  author={Burke, Robin},
+  journal={Encyclopedia of library and information systems},
+  volume={69},
+  number={Supplement 32},
+  pages={175--186},
+  year={2000}
+}
+
+@book{aggarwal2015data,
+  title={Data mining: the textbook},
+  author={Aggarwal, Charu C},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{miyahara2000collaborative,
+  title={Collaborative filtering with the simple bayesian classifier},
+  author={Miyahara, Koji and Pazzani, Michael J},
+  booktitle={Pacific Rim International conference on artificial intelligence},
+  pages={679--689},
+  year={2000},
+  organization={Springer}
+}
+
+@inproceedings{Mobasher2001Rule,
+author = {Mobasher, Bamshad and Dai, Honghua and Luo, Tao and Nakagawa, Miki},
+title = {Effective Personalization Based on Association Rule Discovery from Web Usage Data},
+year = {2001},
+isbn = {1581134444},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/502932.502935},
+doi = {10.1145/502932.502935},
+booktitle = {Proceedings of the 3rd International Workshop on Web Information and Data Management},
+pages = {9–15},
+numpages = {7},
+location = {Atlanta, Georgia, USA},
+series = {WIDM '01}
+}
+
+@inproceedings{Canny2002CF,
+author = {Canny, John},
+title = {Collaborative Filtering with Privacy via Factor Analysis},
+year = {2002},
+isbn = {1581135610},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/564376.564419},
+doi = {10.1145/564376.564419},
+booktitle = {Proceedings of the 25th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
+pages = {238–245},
+numpages = {8},
+
+location = {Tampere, Finland},
+series = {SIGIR '02}
+}
+
+@inproceedings{Aggarwal2001Min,
+author = {Aggarwal, Charu C. and Parthasarathy, Srinivasan},
+title = {Mining Massively Incomplete Data Sets by Conceptual Reconstruction},
+year = {2001},
+isbn = {158113391X},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/502512.502543},
+doi = {10.1145/502512.502543},
+booktitle = {Proceedings of the Seventh ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+pages = {227–232},
+numpages = {6},
+location = {San Francisco, California},
+series = {KDD '01}
+}
+
+@inproceedings{Aggarwal1999CF,
+author = {Aggarwal, Charu C. and Wolf, Joel L. and Wu, Kun-Lung and Yu, Philip S.},
+title = {Horting Hatches an Egg: A New Graph-Theoretic Approach to Collaborative Filtering},
+year = {1999},
+isbn = {1581131437},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/312129.312230},
+doi = {10.1145/312129.312230},
+booktitle = {Proceedings of the Fifth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+pages = {201–212},
+numpages = {12},
+location = {San Diego, California, USA},
+series = {KDD '99}
+}
+
+@inproceedings{Breese1998CF,
+author = {Breese, John S. and Heckerman, David and Kadie, Carl},
+title = {Empirical Analysis of Predictive Algorithms for Collaborative Filtering},
+year = {1998},
+isbn = {155860555X},
+publisher = {Morgan Kaufmann Publishers Inc.},
+address = {San Francisco, CA, USA},
+booktitle = {Proceedings of the Fourteenth Conference on Uncertainty in Artificial Intelligence},
+pages = {43–52},
+numpages = {10},
+location = {Madison, Wisconsin},
+series = {UAI'98}
+}
+
+@article{pazzani1999framework,
+  title={A framework for collaborative, content-based and demographic filtering},
+  author={Pazzani, Michael J},
+  journal={Artificial intelligence review},
+  volume={13},
+  number={5},
+  pages={393--408},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{Krulwich_1997,
+title={LIFESTYLE FINDER: Intelligent User Profiling Using Large-Scale Demographic Data}, 
+volume={18}, url={https://ojs.aaai.org/index.php/aimagazine/article/view/1292},
+DOI={10.1609/aimag.v18i2.1292},
+number={2},
+journal={AI Magazine},
+author={Krulwich, Bruce},
+year={1997},
+month={Jun.},
+pages={37} }
+
+@article{wu2008top,
+  title={Top 10 algorithms in data mining},
+  author={Wu, Xindong and Kumar, Vipin and Quinlan, J Ross and Ghosh, Joydeep and Yang, Qiang and Motoda, Hiroshi and McLachlan, Geoffrey J and Ng, Angus and Liu, Bing and Philip, S Yu and others},
+  journal={Knowledge and information systems},
+  volume={14},
+  number={1},
+  pages={1--37},
+  year={2008},
+  publisher={Springer}
+}
+
+@book{chakrabarti2002mining,
+  title={Mining the Web: Discovering knowledge from hypertext data},
+  author={Chakrabarti, Soumen and others},
+  year={2002},
+  publisher={Morgan Kaufmann}
+}
+
+@article{burke2002hybrid,
+  title={Hybrid recommender systems: Survey and experiments},
+  author={Burke, Robin},
+  journal={User modeling and user-adapted interaction},
+  volume={12},
+  number={4},
+  pages={331--370},
+  year={2002},
+  publisher={Springer}
+}
+
 
 @inproceedings{Cosley2003Influence,
 author = {Cosley, Dan and Lam, Shyong K. and Albert, Istvan and Konstan, Joseph A. and Riedl, John},
@@ -6190,6 +6346,16 @@ location = {Atlanta, GA, USA},
 series = {FAT* '19}
 }
 
+@inproceedings{fish2016confidence,
+  title={A confidence-based approach for balancing fairness and accuracy},
+  author={Fish, Benjamin and Kun, Jeremy and Lelkes, {\'A}d{\'a}m D},
+  booktitle={Proceedings of the 2016 SIAM International Conference on Data Mining},
+  pages={144--152},
+  year={2016},
+  organization={SIAM}
+}
+
+
 
 @article{hajian2012methodology,
   title={A methodology for direct and indirect discrimination prevention in data mining},
@@ -6525,7 +6691,7 @@ numpages = {9}
 
 @inproceedings{Mehrotra2018Towards,
 author = {Mehrotra, Rishabh and McInerney, James and Bouchard, Hugues and Lalmas, Mounia and Diaz, Fernando},
-title = {Towards a Fair Marketplace: Counterfactual Evaluation of the Trade-off between Relevance, Fairness &amp; Satisfaction in Recommendation Systems},
+title = {Towards a Fair Marketplace: Counterfactual Evaluation of the Trade-off between Relevance, Fairness and Satisfaction in Recommendation Systems},
 year = {2018},
 isbn = {9781450360142},
 publisher = {Association for Computing Machinery},
