--- a/chapter6-farpfar.tex
+++ b/chapter6-farpfar.tex
@@ -1,22 +1,23 @@
 \label{sec:farpfar}
 
-In this section, we propose a post-processing approach to mitigate provider unfairness in the context of microlending. Provider unfairness here is defined as mitigating the presentation bias for the minority groups, and it is calculated over a single dimension (region). Since the recommendation slots are limited, utility becomes rivalrous for providers. Recommendation systems contain popularity bias that contributes to presentation bias. And the utility is calculated as an average utility over all the users. Therefore, this value is skewed towards the majority group and any attempt to increase the exposure of the minority group, by allocating some of the recommendation slots to them, will lead to loss of accuracy. 
+In this section, we propose a post-processing approach to mitigate provider unfairness in the context of microlending. Provider unfairness here is defined as mitigating the presentation bias for the minority group(s), and is calculated over a single dimension (region). 
 
-The goal of this project is to achieve a reasonable accuracy/fairness balance. In other words, we intend to maximize lenders' interests while ensuring a ``fairer'' allocation of recommendation opportunities across the borrower side. Our method has the capability of controlling between fairness and accuracy, so it can be tuned according to the application that it is going to be used for.
+Recommendation systems cause presentation bias, which contributes to the existing popularity bias in the data. The created positive feedback loops, cause the already popular items to gain more popularity in every iteration. Recommendation slots provide exposure opportunities for the providers and they are limited. Therefore, these slots become rivalrous for providers/lenders. Because of the previous issue, most of these slots will be (unfairly) allocated to the popular items.
+ 
+The goal of this project is to ensure a ``fairer'' allocation of recommendation opportunities across the borrower side. Although, any attempt to increase the exposure of the minority group, by allocating some of the recommendation slots to them, will lead to loss of accuracy. Therefore, achieving a reasonable accuracy/fairness balance and having the capability of controlling this balance is the main goal of this project. Although this method is presented in the context of microlending, but it can be applicable in other contexts. The definition of fairness might differ in every application and system's need for the level of fairness in that application might also be different. Being able to control the accuracy/fairness balance provides a flexibility to apply the following method in other contexts easier.
+
+
+% This method has the capability of controlling between fairness and accuracy, so it can be tuned according to the application that it is going to be used for.
+
+% The goal of this project is to achieve a reasonable accuracy/fairness balance. In other words, we intend to maximize lenders' interests while ensuring a ``fairer'' allocation of recommendation opportunities across the borrower side. Our method has the capability of controlling between fairness and accuracy, so it can be tuned according to the application that it is going to be used for.
 
 \subsection{Introduction}
 
-Microlending is a form of financing that provides small and low-interest loans to small-entrepreneurs usually from impoverished countries. Today, microlending has become a big business with many for-profit and non-profit companies offering micro-financing options to businesses worldwide. Kiva Microfunds (Kiva.org) is one of the leading international microlending organizations which we use as a case study in this project and throughout my dissertation.
+% Microlending is a form of financing that provides small and low-interest loans to small-entrepreneurs usually from impoverished countries. Today, microlending has become a big business with many for-profit and non-profit companies offering micro-financing options to businesses worldwide. Kiva Microfunds (Kiva.org) is one of the leading international microlending organizations which we use as a case study in this project and throughout my dissertation.
+
+Microlending provides a form of financing for small businesses usually from underprivileged countries (details in Chapter \ref{ch:intro}). Kiva is an example of such a system which is a case study in this project and throughout my dissertation. The stakeholders of interest in this use case are lenders (who receive loan recommendations), and borrowers (whose loans are recommended to the lenders).
 
 To assist lenders in looking for promising (low-risk) borrowers, loan recommender systems \cite{choo2014gather,choo2014understanding} are designed and utilized. Such systems model lenders' historical behaviors and generate personalized recommendations to meet the lenders' interests or needs. While these recommender systems aim to provide efficient and personalized services, two issues are largely overlooked: (\romannum{1}) unfairness in recommendations, and (\romannum{2})lenders propensity/tolerance to diversity. We will describe them in details below. 
-
-\begin{figure}[htb]
-%\vspace{-0.25cm}
-\includegraphics[width=0.98\columnwidth]{imgs/far/microlending.png}
-%\vspace{-0.25cm}
-\caption{Kiva.org provides an intermediary service for lenders and borrowers.}
-\label{fig:kiva_process}
-\end{figure}
 
 \begin{figure}[htb]
 %\vspace{-0.25cm}
@@ -25,8 +26,10 @@ To assist lenders in looking for promising (low-risk) borrowers, loan recommende
 \caption{The issue of fairness on regions in a designed loan recommender system \cite{choo2014gather} for Kiva: the recommendation percentage for each region.}
 \label{fig:recom_result}
 \end{figure}
+\todo[inline]{move kiva plots to the introduction section and remove it from far, pfar! combine it's intro with the main intro}
+% \todo[inline]{missing some initial sentences}
 
-\todo[inline]{we are mitigating provider presentation bias! make sure all the definitions align everywhere}
+% \todo[inline]{we are mitigating provider presentation bias! make sure all the definitions align everywhere}
 
 \textbf{(\romannum{1})~Unfair recommendation} The existing recommender systems for microlending are all lender-centered. These recommender systems have been demonstrated to favor popular items \cite{celma2008hits,lee2014fairness}, resulting in extremely unbalanced recommendation results --- majority groups are usually over-represented, thereby holding a higher proportion of opportunities and resources, while minority groups barely receive exposure. For example, it is observed that certain geographical regions such as Asia and Africa dominate the recommendation in a designed loan recommender system for Kiva~\cite{choo2014gather}; whereas, others like Oceania and Eastern Europe barely receive recommendations, as shown in Figure \ref{fig:recom_result}. Less exposure means the borrowers from these regions are less likely to be funded.
 
